2016-02-24  Erik Hetzner  <egh@e6h.org>

	* mime-edit.el (mime-prompt-for-type, mime-prompt-for-type)
	(mime-prompt-for-encoding): Use default parameter to set default
	answer.
	(mime-prompt-for-encoding): Make default optional.
	(mime-edit-insert-voice): Use `mime-prompt-for-encoding' to prompt
	user for encoding.

2016-02-04  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	User is now prompted whether proceed PGP/MIME encryption when
	recipient key is not available.
	* mime-edit.el (mime-edit-encrypt-pgp-ignore-missing-keys): New
	variable.
	(mime-edit-encrypt-pgp-recipients-keys): New function.
	(mime-edit-encrypt-pgp-mime): Use them.

2016-01-17  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-encrypt-pgp-mime): Do not let-bind
	variable for mime-edit-make-encrypt-recipient-header here.
	(mime-edit-make-encrypt-recipient-header): Let-bind internal
	variable here.

2015-05-25  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-shr.el (mime-shr-preview-text/html): Workaround for
	shr-insert-document.
	Cf. https://github.com/wanderlust/semi/issues/11

2015-05-25  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-tnef.el (mime-tnef-insert-file): Fix for non-ASCII filename.
	(mime-display-application/ms-tnef): Adjusted.

2015-05-16  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	Experimental support of application/ms-tnef entity.
	* mime-edit.el (mime-content-types): Add entries for ms-tnef
	subtype.
	(mime-file-types): Add entry for winmail.dat.

	* mime-tnef.el: New file.

	* semi-setup.el: Define preview condition for application/ms-ntef
	entity.

	* SEMI-ELS (semi-modules-to-compile): Add mime-tnef.el.

2015-05-07  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-pgp-get-signers): Search epg-key from
	From: field's mail address with exact match.

2015-05-07  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-make-encrypt-recipient-header): Car of
	return vale is now expanded list of mail addresses and key-id.
	Enclose mail addresses with '<' and '>'.