@@ -1,3 +1,14 @@
+2016-03-01  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	* mime-edit.el (mime-edit-insert-file-charset): Use default
+	parameter for completing-read.  Show default value into the
+	prompt.
+	(mime-prompt-for-type): Simplify result checking routine.
+	(mime-prompt-for-subtype): Refactored.
+	(mime-prompt-for-parameter): Use default parameter for
+	completing-read.
+	(mime-prompt-for-encoding): Show default value into the prompt.
+
 2016-02-24  Erik Hetzner  <egh@e6h.org>
 
 	* mime-edit.el (mime-prompt-for-type, mime-prompt-for-type)
